--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
+ REACT_APP_BASE_URL=https://hms.kloudcrm.site/api
 
-REACT_APP_BASE_URL=http://localhost:8000
+# REACT_APP_BASE_URL=http://localhost:8000
