--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
- REACT_APP_BASE_URL=https://vps.kloudcrm.site/api
+REACT_APP_BASE_URL=http://103.138.96.104/api
+
 
 # REACT_APP_BASE_URL=http://localhost:8000
