--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
-REACT_APP_BASE_URL=http://103.138.96.104
-
+ REACT_APP_BASE_URL=https://vps.kloudcrm.site/api
 
 # REACT_APP_BASE_URL=http://localhost:8000
