--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
- REACT_APP_BASE_URL=https://vps.kloudcrm.site
+ REACT_APP_BASE_URL=https://kloudcrm.site
 
 # REACT_APP_BASE_URL=http://localhost:8000
