--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
 #  REACT_APP_BASE_URL=https://kloudcrm.site
-REACT_APP_BASE_URL=https://api.tibbia.kloudcrm.site
+REACT_APP_BASE_URL=https://tibbia.kloudcrm.site
 
 # REACT_APP_BASE_URL=http://localhost:8000
