--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # REACT_APP_BASE_URL=https://kloudhospitals.api.uudra.in
 #  REACT_APP_BASE_URL=https://kloudcrm.site
-REACT_APP_BASE_URL=https://tibbia.kloudcrm.site
+REACT_APP_BASE_URL=https://tibbia.kloudcrm.site/api
 
 
 # REACT_APP_BASE_URL=http://localhost:8000
